--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,5 @@
 version: '3'
 services:
-  db:
-    image: mysql:5.7.22
-    container_name: codevilafood-db
-    restart: always
-    ports:
-        - "3308:3306"
-    environment:
-      MYSQL_DATABASE: 'codevilafood'
-      MYSQL_USER: 'root'
-      MYSQL_ROOT_PASSWORD: '12345678'
-    networks:
-      - app-network
   app:
     build:
       context: .
@@ -21,36 +9,4 @@ services:
       - ./:/var/www/html
     ports:
       - 3000:3000
-    networks:
-      - app-network
-    depends_on:
-      - db
-    links: 
-      - db
-networks:
-  app-network:
-    driver: bridge
-
-
-
-
-
-
-#para conectar na base local do pc
-
-#version: '3'
-#services:
-#  app:
-#    build:
-#      context: .
-#      dockerfile: ./Dockerfile
-#    container_name: codevilafood
-#    volumes:
-#      - ./:/var/www/html
-#    ports:
-#      - 3000:3000
-#    network_mode: "host"
-
-#networks:
-#app-network:
-# driver: bridge
+    network_mode: "host"
