--- a/.env.example
+++ b/.env.example
@@ -51,4 +51,4 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-TELESCOPE_ENABLED=true
+TELESCOPE_ENABLED=false
