--- a/.env.example
+++ b/.env.example
@@ -51,4 +51,6 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-TELESCOPE_ENABLED=false
+URI_CLIENT=http://127.0.0.1:3000
+
+TELESCOPE_ENABLED=true
