estrutura inicial site do cliente

--- a/package.json
+++ b/package.json
@@ -17,6 +17,11 @@
         "vue-loader": "^16.8.3"
     },
     "dependencies": {
-        "vue": "^3.2.36"
+        "laravel-vue-pagination": "^4.0.0",
+        "v-money3": "^3.23.0",
+        "vue": "^3.2.36",
+        "vue-the-mask": "^0.11.1",
+        "vue3-select2-component": "^0.1.7",
+        "vuex": "^4.0.0"
     }
 }
