implementação dos proloader

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "v-money3": "^3.23.0",
         "vue": "^3.2.36",
         "vue-the-mask": "^0.11.1",
+        "vue3-carousel": "^0.2.12",
         "vue3-select2-component": "^0.1.7",
         "vuex": "^4.0.0"
     }
