implementação adição de produtos no carrinho

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "vue-the-mask": "^0.11.1",
         "vue3-carousel": "^0.2.12",
         "vue3-select2-component": "^0.1.7",
+        "vue3-toastify": "^0.1.1",
         "vuex": "^4.0.0"
     }
 }
