integração inicial mercadopago

--- a/.env.example
+++ b/.env.example
@@ -56,3 +56,17 @@ URI_CLIENT=http://127.0.0.1:3000
 TELESCOPE_ENABLED=true
 
 GOOGLE_MAPS_KEY=
+MIX_CEP_ABERTO=
+
+CRIPTO_KEY=""
+MIX_CRIPTO_KEY=""
+
+MP_PRODUCTION=0 
+
+MERCADO_PAGO_SANDBOX_PUBLIC_KEY=""
+MERCADO_PAGO_SANDBOX_TOKEN=""
+
+MERCADO_PAGO_PUBLIC_KEY=""
+MERCADO_PAGO_TOKEN=""
+MERCADO_PAGO_CLIENTE_ID=""
+MERCADO_PAGO_CLIENT_SECRET=""
