--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/sanctum": "^2.15",
         "laravel/telescope": "^4.9",
         "laravel/tinker": "^2.5",
+        "predis/predis": "^2.1",
         "simplesoftwareio/simple-qrcode": "^4.2"
     },
     "require-dev": {
