--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,8 @@ services:
 
   redis:
       image: redis:latest
+      ports:
+          - "6379:6379"
       networks:
           - app-network
 
@@ -33,9 +35,7 @@ services:
     networks:
       - app-network
     depends_on:
-      - db
-    links: 
-      - db
+      - redis
 
 networks:
   app-network:
