estrutura inicial websocket

--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     },
     "dependencies": {
         "@mercadopago/sdk-js": "^0.0.2",
+        "laravel-echo": "^1.9.0",
         "laravel-vue-pagination": "^4.0.0",
+        "socket.io-client": "^2.3.0",
         "v-money3": "^3.23.0",
         "vue": "^3.2.36",
         "vue-the-mask": "^0.11.1",
