--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,19 @@
 version: '3'
 services:
+  app:
+    build:
+      context: .
+      dockerfile: ./Dockerfile
+    container_name: buzzin-app
+    volumes: 
+      - ./:/var/www/html
+    ports:
+      - 80:80
+    networks:
+      - app-network
+    depends_on:
+      - redis
+
   db:
     image: mysql:5.7.22
     container_name: buzzin-db
@@ -23,44 +37,20 @@ services:
       networks:
           - app-network
 
-  app:
-    build:
-      context: .
-      dockerfile: ./Dockerfile
-    container_name: buzzin-app
-    volumes: 
-      - ./:/var/www/html
-    ports:
-      - 80:80
-    networks:
-      - app-network
-    depends_on:
-      - redis
+  queue:
+      build:
+        context: .
+        dockerfile: ./Dockerfile
+      restart: always
+      command: "php artisan queue:work"
+      volumes:
+            - ./:/var/www/html
+      depends_on:
+          - redis
+          - app
+      networks:
+          - app-network
 
 networks:
   app-network:
     driver: bridge
-
-
-
-
-
-
-#para conectar na base local do pc
-
-#version: '3'
-#services:
-#  app:
-#    build:
-#      context: .
-#      dockerfile: ./Dockerfile
-#    container_name: codevilafood
-#    volumes:
-#      - ./:/var/www/html
-#    ports:
-#      - 3000:3000
-#    network_mode: "host"
-
-#networks:
-#app-network:
-# driver: bridge
