--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     container_name: buzzin-app
     volumes: 
       - ./:/var/www/html
+      - ./.certs/:/etc/letsencrypt
     ports:
       - 80:80
       - 443:443
