--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     volumes: 
       - ./:/var/www/html
       - ./.certs/:/etc/letsencrypt
+      - ./.sites-avaliable/:/apache2/sites-available
     ports:
       - 80:80
       - 443:443
@@ -34,6 +35,7 @@ services:
 
   redis:
       image: redis:latest
+      command: redis-server --appendonly yes --replica-read-only no
       ports:
           - "6379:6379"
       networks:
