--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,8 @@ services:
     container_name: buzzin-app
     volumes: 
       - ./:/var/www/html
-      - ./.certs/:/etc/letsencrypt
-      - ./.sites-avaliable/:/etc/apache2/sites-available
+      - ./.docker/certs/:/etc/letsencrypt
+      - ./.docker/sites-avaliable/:/etc/apache2/sites-available
     ports:
       - 80:80
       - 443:443
