--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "fruitcake/laravel-cors": "^2.0",
         "grimzy/laravel-mysql-spatial": "5.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "inertiajs/inertia-laravel": "^0.6.10",
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.15",
         "laravel/telescope": "^4.9",
