--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,8 +43,20 @@ services:
       command: redis-server --appendonly yes --replica-read-only no
       ports:
           - "6379:6379"
+      volumes: "./.docker/redis:/data"
       networks:
           - app-network
+      deploy:
+        replicas: 1
+        resources:
+          limits:
+            cpus: "0.5"
+            memory: 250M
+          reservations:
+            cpus: "0.1"
+            memory: 20m
+        restart_policy:
+          condition: on-failure
 
   queue:
       build:
