--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,17 @@ services:
     ports:
       - 80:80
       - 443:443
+    deploy:
+      replicas: 1
+      resources:
+        limits:
+          cpus: "1"
+          memory: 750M
+        reservations:
+          cpus: "0.1"
+          memory: 20M
+      restart_policy:
+        condition: on-failure
     entrypoint: ./run-after-build.sh
     networks:
       - app-network
