--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       resources:
         limits:
           cpus: "1"
-          memory: 750M
+          memory: 500M
         reservations:
           cpus: "0.1"
           memory: 20M
@@ -45,6 +45,17 @@ services:
       MYSQL_USER: ${DB_USERNAME}
     volumes:
         - ./.docker/mysql/dbdata:/var/lib/mysql
+    deploy:
+      replicas: 1
+      resources:
+        limits:
+          cpus: "1"
+          memory: 250M
+        reservations:
+          cpus: "0.1"
+          memory: 20M
+      restart_policy:
+        condition: on-failure
     networks:
       - app-network
 
@@ -62,7 +73,7 @@ services:
         replicas: 1
         resources:
           limits:
-            cpus: "0.5"
+            cpus: "1"
             memory: 250M
           reservations:
             cpus: "0.1"
