fix: redis volume

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,7 +66,7 @@ services:
       ports:
           - "6379:6379"
       volumes: 
-        - "./.docker/redis:/data"
+        - ./.docker/redis:/data
       networks:
           - app-network
       deploy:
